[gd_scene load_steps=26 format=3 uid="uid://bdf4myu0dmj1i"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_j1m10"]
[ext_resource type="Texture2D" uid="uid://bb5gtcxu4gdj6" path="res://Assets/UI/panel_grey_bolts_red.svg" id="2_75mwv"]
[ext_resource type="Texture2D" uid="uid://bjs5iheoq0yp2" path="res://Assets/UI/panel_grey_bolts_green.svg" id="2_ott6r"]
[ext_resource type="Texture2D" uid="uid://c8c7jkk01pa6k" path="res://Assets/Art/Capture.JPG" id="2_rmghl"]
[ext_resource type="Texture2D" uid="uid://56gsdnn3557j" path="res://Assets/UI/panel_grey_bolts_blue.svg" id="3_rhr72"]
[ext_resource type="FontFile" uid="uid://bmgtgu7j6tj4" path="res://Assets/Font/BLKCHCRY.TTF" id="4_rhlgd"]
[ext_resource type="Theme" uid="uid://5kthnogagsyv" path="res://Themes/Header.tres" id="8_1g0ei"]
[ext_resource type="PackedScene" uid="uid://cxcvixo113he6" path="res://Scenes/Misc/mute_button.tscn" id="9_3w8kb"]
[ext_resource type="PackedScene" uid="uid://bgocojnwwsu3i" path="res://Scenes/saved_character_popup_window.tscn" id="9_goljo"]
[ext_resource type="PackedScene" uid="uid://bbirfrjlpwi6b" path="res://delete_character_popup_window.tscn" id="10_1bu1k"]
[ext_resource type="PackedScene" uid="uid://buh1f2rygnv1q" path="res://delete_warning_window.tscn" id="10_lr1wc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hbix7"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.3)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wjr2k"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mxs07"]
texture = ExtResource("2_ott6r")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4a54c"]
texture = ExtResource("3_rhr72")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rf43s"]
texture = ExtResource("2_ott6r")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="Theme" id="Theme_gs6n2"]
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.0901961, 0.662745, 1, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0.0901961, 0.662745, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/align_to_largest_stylebox = 0
Button/constants/h_separation = 4
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 60
Button/fonts/font = ExtResource("4_rhlgd")
Button/styles/disabled = SubResource("StyleBoxFlat_hbix7")
Button/styles/focus = SubResource("StyleBoxFlat_wjr2k")
Button/styles/hover = SubResource("StyleBoxTexture_mxs07")
Button/styles/normal = SubResource("StyleBoxTexture_4a54c")
Button/styles/pressed = SubResource("StyleBoxTexture_rf43s")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6qal0"]
texture = ExtResource("2_ott6r")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bcbvb"]
texture = ExtResource("3_rhr72")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8xe86"]
texture = ExtResource("2_ott6r")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y0p3u"]
texture = ExtResource("3_rhr72")

[sub_resource type="Theme" id="Theme_wrh4l"]
Button/font_sizes/font_size = 60
Button/fonts/font = ExtResource("4_rhlgd")
Button/styles/hover = SubResource("StyleBoxTexture_6qal0")
Button/styles/normal = SubResource("StyleBoxTexture_bcbvb")
Button/styles/pressed = SubResource("StyleBoxTexture_8xe86")
Label/styles/normal = SubResource("StyleBoxTexture_y0p3u")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yu5gl"]
texture = ExtResource("2_75mwv")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hpfnu"]
texture = ExtResource("2_75mwv")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ugd67"]
texture = ExtResource("3_rhr72")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j1m10")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -472.0
offset_right = 220.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rmghl")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -342.0
offset_top = -35.0
offset_right = 342.0
offset_bottom = 519.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="NewCharacterButton" type="Button" parent="VBoxContainer" groups=["Button"]]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_gs6n2")
theme_type_variation = &"FlatButton"
text = "Create New Character"

[node name="UpdateCharacterButton" type="Button" parent="VBoxContainer" groups=["Button"]]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_gs6n2")
theme_type_variation = &"FlatButton"
disabled = true
text = "Update Existing Character"

[node name="ViewCharacterButton" type="Button" parent="VBoxContainer" groups=["Button"]]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_gs6n2")
theme_type_variation = &"FlatButton"
text = "Load Existing Character"

[node name="ViewDeleteCharacterButton" type="Button" parent="VBoxContainer" groups=["Button"]]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_gs6n2")
theme_type_variation = &"FlatButton"
text = "Delete Existing Character"

[node name="ExitButton" type="Button" parent="VBoxContainer" groups=["Button"]]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_wrh4l")
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_color = Color(0.529412, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.529412, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxTexture_yu5gl")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hpfnu")
theme_override_styles/normal = SubResource("StyleBoxTexture_ugd67")
text = "Exit"

[node name="Label" type="Label" parent="." groups=["Title"]]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -355.0
offset_top = 13.0
offset_right = 355.0
offset_bottom = 182.0
grow_horizontal = 2
theme = ExtResource("8_1g0ei")
theme_override_fonts/font = ExtResource("4_rhlgd")
text = "WARPS
Character Creator"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MuteButton" parent="." instance=ExtResource("9_3w8kb")]
layout_mode = 1
offset_top = -103.0
offset_bottom = 0.0

[node name="SavedCharacterPopupWindow" parent="." instance=ExtResource("9_goljo")]
visible = false

[node name="DeleteCharacterPopupWindow" parent="." instance=ExtResource("10_1bu1k")]
visible = false

[node name="DeleteWarningWindow" parent="." instance=ExtResource("10_lr1wc")]
visible = false

[connection signal="pressed" from="VBoxContainer/NewCharacterButton" to="." method="_on_new_character_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ViewCharacterButton" to="." method="_on_view_character_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ViewDeleteCharacterButton" to="." method="_on_view_delete_character_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
